--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- #favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logobam.png" type="image/x-icon">
+  <!-- Site Metas -->
+  <meta name="keywords" content="Bamiedata,Data Subscription,cheap data, buy data, affordable data plans, data reseller, MTN data, Glo data, Airtel data, 9mobile data, SME data, fast data purchase, instant data, VTU, data subscription, data bundles, Nigeria data plans, data business, bulk data, cheap internet, mobile data, online data top-up, airtime to cash, data sales platform" />
+  <meta name="description" content="Bamiedata is reliable and affordable platform to buy cheap data bundles and Airtime topup of any Nigerian network. We offer the best price rates for Airtel, MTN, 9mobile and Glo data plans." />
+  <meta name="author" content="Bamie Data - Affordable Data Reselling Platform in Nigeria" />
+  
     <!-- #title -->
     <title>Bamiedata - Enjoy Unlimted Data and Pay bills</title>
-    <!-- #keywords -->
-    <meta name="keywords" content="Bamiedata is an online data app to pay bills, purchased recharge card and subscription">
-    <!-- #description -->
-    <meta name="description" content="Bamiedata - Enjoy Unlimted Data">
+
 
     <!--  css dependencies start  -->
 
