--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     
                             </li>
                             <li class="menu_item dropdown">
-                                <a class="menu_link dropdown-tggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> About Us </a>
+                                <a class="menu_link dropdown-tggle" href="#faqa" role="button" data-bs-toggle="dropdown" aria-expanded="false"> About Us </a>
                             </li>
                             <li class="menu_item dropdown">
                                 <a class="menu_link dropdown-tggle" href="https://sabuss.com/bamiedata2?login" role="button" data-bs-toggle="dropdown" aria-expanded="false"> SignUp/Login</a>
