--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <p class="section__content-text wow fadeInDown" data-wow-duration="0.8s">Our platform makes paying bills easy and faster...</p>
                         <div class="btn-group mt_40 wow fadeInUp" data-wow-duration="0.8s">
                             
-                            <a href="https://drive.google.com/file/d/1Ck2wwSq6VjvXiruN1KtuHROMZBjMIs1t/view?usp=drivesdk" class="btn_theme">Download App<i class="bi bi-arrow-up-right"></i><span></span></a>
+                            <a href="https://github.com/Mastercraft-ad/bamiedata/releases/download/appybamiedata/Bamiedata_1_1.0.1.apk" class="btn_theme">Download App<i class="bi bi-arrow-up-right"></i><span></span></a>
                         </div>
                     </div>
                 </div>
