--- a/index.html
+++ b/index.html
@@ -208,26 +208,18 @@
             <div class="row">
                 <div class="sponsor__company" id="sponsor__company">
                     <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo.png" alt="Image">
+                        <img src="assets/images/mtn.png" alt="Image">
                     </div>
                     <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo2.png" alt="Image">
+                        <img src="assets/images/airtel.jpeg" alt="Image">
                     </div>
                     <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo3.png" alt="Image">
+                        <img src="assets/images/glo.jpeg" alt="Image">
                     </div>
                     <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo4.png" alt="Image">
+                        <img src="assets/images/gotv.png" alt="Image">
                     </div>
-                    <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo2.png" alt="Image">
-                    </div>
-                    <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo4.png" alt="Image">
-                    </div>
-                    <div class="sponsor__logo wow fadeInUp" data-wow-duration="0.8s">
-                        <img src="assets/images/sponsor_logo3.png" alt="Image">
-                    </div>
+                    
                 </div>
             </div>
         </div>
