--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
     <!--Hero Section End -->
 
-    <!-- sponsor start -->
+    <!-- sponsor start -
     <div class="section sponsor-slider wow fadeInDown" data-wow-duration="0.8s">
         <div class="container">
             <div class="row">
@@ -224,7 +224,7 @@
             </div>
         </div>
     </div>
-    <!-- sponsor end -->
+     sponsor end -->
 
     <!-- why-choose start -->
     <section class="why-choose section">
