--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <ul class="custom-nevbar__right-location">
                             <li>
                                 <p class="mb-2">Phone: </p>
-                                <a href="tel:+2349136447931" class="fs-4 contact">+2349136447931</a>
+                                <a href="tel:+2349136447931" class="fs-4 contact">+2349129324801</a>
                             </li>
                             <li class="location">
                                 <p class="mb-2">Email: </p>
@@ -686,7 +686,7 @@
                     <div class="footer__contact ms-sm-4 ms-xl-0 wow fadeInUp" data-wow-duration="0.8s">
                         <h4 class="footer__title mb-4">Contact</h4>
                         <div class="footer__content">
-                            <a href="tel:+1-234-567-891"> <span class="btn_theme social_box"> <i class="bi bi-telephone-plus"></i> </span> +2349136447931 <span></span> </a> 
+                            <a href="tel:+1-234-567-891"> <span class="btn_theme social_box"> <i class="bi bi-telephone-plus"></i> </span>+2349129324801 <span></span> </a> 
                             
                             <a href="#"> <span class="btn_theme social_box"> <i class="bi bi-geo-alt"></i> </span> Medinah Community Central Mosque,Ilere Akure Ondo State <span></span> </a>
                         </div>
@@ -710,9 +710,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__copyright">
-                        <p class="copyright text-center">Copyright © <span id="copyYear"></span> <a href="#" class="secondary_color">BAMIEDATA</a>. Dev By <a href="https://www.linkedin.com/in/amb-moses-pius-25130a1a3/" class="secondary_color">MasterCraft</a></p>
+                        <p class="copyright text-center">Copyright © <span id="copyYear"></span> <a href="#" class="secondary_color">BAMIEDATA</a>. Dev By <a href="https://ibrahimbami.onrender.com/" class="secondary_color">Bamiedev</a></p>
                         <ul class="footer__copyright-conditions">
-                            <li><a href="https://wa.me/234913647931">Help & Support</a></li>
+                            <li><a href="https://wa.me/2349129324801">Help & Support</a></li>
                             <li><a href="#">Privacy policy</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
