--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             </li>
                             <li class="location">
                                 <p class="mb-2">Email: </p>
-                                <a href="" class="fs-4 contact"><span class="__cf_email__" data-cfemail="5f163139301f38323e3633713c3032">bamiebot@gmail.com</span></a>
+                                <a href="" class="fs-4 contact"><span class="mailto:bamiebot@gmail.com>bamiebot@gmail.com</span></a>
                             </li>
                             <li class="location">
                                 <p class="mb-2">Location: </p>
