--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                         <ul class="custom-nevbar__right-location">
                             <li>
                                 <p class="mb-2">Phone: </p>
-                                <a href="tel:+2349136447931" class="fs-4 contact">+2349129324801</a>
+                                <a href="tel:+2349129324801" class="fs-4 contact">+2349129324801</a>
                             </li>
                             <li class="location">
                                 <p class="mb-2">Email: </p>
-                                <a href="" class="fs-4 contact"><span class="mailto:bamiebot@gmail.com>bamiebot@gmail.com</span></a>
+                                <a href="" class="fs-4 contact"><span class="__cf_email__" data-cfemail="5f163139301f38323e3633713c3032">bamiebot@gmail.com</span></a>
                             </li>
                             <li class="location">
                                 <p class="mb-2">Location: </p>
